--- a/src/components/navigation/mobNavigation/mobNavigation.module.css
+++ b/src/components/navigation/mobNavigation/mobNavigation.module.css
@@ -5,7 +5,6 @@
     width: 100vw;
     height: 100vh;
     z-index: 120;
-    overflow: hidden;
     background-color: rgb(0, 0, 0, 70%);
 }
 
@@ -21,7 +20,7 @@
     width: 50%;
     height: 100%;
     color: var(--color__gray);
-
+    overflow: auto;
     transform: translateX(-100%);
     animation-name: animation__1;
     animation-duration: .4s;
