--- a/src/components/page_catalog/productPage/productGalary/productGalary.module.css
+++ b/src/components/page_catalog/productPage/productGalary/productGalary.module.css
@@ -1,38 +1,56 @@
 
 .container{
     width: 100%;
-    height: 100%;
+    height: 500px;
     overflow: hidden;
 }
 .activeImage{
-    width: 100%;
-    height: 60%;
+    height: 80%;
     cursor: pointer;
+    padding: 10%;
+    overflow: hidden;
 }
+.activeImage img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    object-position: center;
+}
+
 .imageGalary{
     width: 100%;
-    height: 30%;
-    max-height: 150px;
+    height: 20%;
     display: flex;
     align-items: center;
     justify-content: flex-start;
     flex-wrap: wrap;
 }
-
-.smallImg{
+.imageGalary>div{
     width: 18%;
+    height: 100%;
+    padding: 10px;
     border: 1px solid var(--color__lightgray);
     margin: 0 .2rem;
     cursor: pointer;
+    overflow: hidden;
     transition: all ease .3s;
+}
+.smallImg{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    object-position: center;
+}
+
+.imageGalary>div.active{
+    border-bottom: 3px solid var(--color__lightgreen);
 }
 
 
 
 
-
 .modal_wrapper{
-    padding: 2%;
+    padding: 10% 5%;
     position: fixed;
     top: 0;
     left: 0;
@@ -46,9 +64,8 @@
     overflow: hidden;
 }
 .modal_content{
-    height: 90%;
-    max-height: 90%;
-    max-width: 95%;
+    height: 100%;
+    width: 100%;
     overflow: hidden;
     display: flex;
     align-items: center;
@@ -56,9 +73,9 @@
     padding: 1rem;
 }
 .modal_content .foolScreenImg{
-    height: auto;
-    max-height: 80%;
-    width: auto;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
     object-position: center;
 }
 
@@ -89,6 +106,18 @@
     right: 1rem;
 }
 
-.active{
-    border-bottom: 2px solid var(--color__lightgreen);
+
+
+
+
+@media screen and (max-width: 992px){
+ 
+}
+
+@media screen and (max-width: 768px){
+ 
+}
+@media screen and (max-width: 480px){
+    
+   
 }
