--- a/src/components/page_catalog/products/products.module.css
+++ b/src/components/page_catalog/products/products.module.css
@@ -49,7 +49,11 @@
 .products__container >h4{
     padding: .5rem;
 }
-
+@media screen and (max-width: 1200px){
+    .products__container{
+        grid-template-columns: repeat(3, 2fr);
+    }
+}
 
 
 @media screen and (max-width: 992px){
@@ -61,9 +65,6 @@
 }
 
 @media screen and (max-width: 768px){
-    .products__container{
-        grid-template-columns: repeat(2, 2fr);
-    }
     .drop{
         justify-content: space-between;
     }
