--- a/src/components/basket/pcBasket/basketProduct/basketProduct.module.css
+++ b/src/components/basket/pcBasket/basketProduct/basketProduct.module.css
@@ -20,8 +20,10 @@
       overflow: hidden;
   }
   .product__img img{
-    width: auto;
-    max-width: 80%;  
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    object-position: center;
   }
   .product__price{
        width: 11rem;
