--- a/src/components/wrapper_components/openFormButton/openFormButton.module.css
+++ b/src/components/wrapper_components/openFormButton/openFormButton.module.css
@@ -5,7 +5,7 @@
 }
 .button{
     width: fit-content;
-    height: 2.5rem;
+    height: auto;
     padding: .5rem 1rem;
     border: 1px solid #dbdbdb;
     border-radius: 1.1rem;
